--- a/packages.bib
+++ b/packages.bib
@@ -3,47 +3,47 @@
   author = {{R Core Team}},
   organization = {R Foundation for Statistical Computing},
   address = {Vienna, Austria},
-  year = {2022},
+  year = {2019},
   url = {https://www.R-project.org/},
 }
 
 @Manual{R-bookdown,
   title = {bookdown: Authoring Books and Technical Documents with R Markdown},
   author = {Yihui Xie},
-  year = {2023},
-  note = {R package version 0.34},
-  url = {https://CRAN.R-project.org/package=bookdown},
+  year = {2021},
+  note = {R package version 0.21.6},
+  url = {https://github.com/rstudio/bookdown},
 }
 
 @Manual{R-dplyr,
   title = {dplyr: A Grammar of Data Manipulation},
-  author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
-  year = {2022},
-  note = {R package version 1.0.9},
+  author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller and Davis Vaughan},
+  year = {2023},
+  note = {R package version 1.1.0},
   url = {https://CRAN.R-project.org/package=dplyr},
 }
 
 @Manual{R-forcats,
   title = {forcats: Tools for Working with Categorical Variables (Factors)},
   author = {Hadley Wickham},
-  year = {2021},
-  note = {R package version 0.5.1},
+  year = {2023},
+  note = {R package version 1.0.0},
   url = {https://CRAN.R-project.org/package=forcats},
 }
 
 @Manual{R-forecast,
   title = {forecast: Forecasting Functions for Time Series and Linear Models},
-  author = {Rob Hyndman and George Athanasopoulos and Christoph Bergmeir and Gabriel Caceres and Leanne Chhay and Kirill Kuroptev and Mitchell O'Hara-Wild and Fotios Petropoulos and Slava Razbash and Earo Wang and Farah Yasmeen},
-  year = {2023},
-  note = {R package version 8.21},
+  author = {Rob Hyndman and George Athanasopoulos and Christoph Bergmeir and Gabriel Caceres and Leanne Chhay and Mitchell O'Hara-Wild and Fotios Petropoulos and Slava Razbash and Earo Wang and Farah Yasmeen},
+  year = {2020},
+  note = {R package version 8.13},
   url = {https://CRAN.R-project.org/package=forecast},
 }
 
 @Manual{R-ggplot2,
   title = {ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics},
   author = {Hadley Wickham and Winston Chang and Lionel Henry and Thomas Lin Pedersen and Kohske Takahashi and Claus Wilke and Kara Woo and Hiroaki Yutani and Dewey Dunnington},
-  year = {2022},
-  note = {R package version 3.3.6},
+  year = {2023},
+  note = {R package version 3.4.1},
   url = {https://CRAN.R-project.org/package=ggplot2},
 }
 
@@ -58,89 +58,97 @@
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
-  year = {2022},
-  note = {R package version 1.39},
+  year = {2021},
+  note = {R package version 1.31},
   url = {https://yihui.org/knitr/},
 }
 
 @Manual{R-latex2exp,
   title = {latex2exp: Use LaTeX Expressions in Plots},
   author = {Stefano Meschiari},
-  year = {2022},
-  note = {R package version 0.9.6},
-  url = {https://CRAN.R-project.org/package=latex2exp},
+  year = {2015},
+  note = {R package version 0.4.0},
+  url = {http://github.com/stefano-meschiari/latex2exp},
+}
+
+@Manual{R-lubridate,
+  title = {lubridate: Make Dealing with Dates a Little Easier},
+  author = {Vitalie Spinu and Garrett Grolemund and Hadley Wickham},
+  year = {2023},
+  note = {R package version 1.9.2},
+  url = {https://CRAN.R-project.org/package=lubridate},
 }
 
 @Manual{R-patchwork,
   title = {patchwork: The Composer of Plots},
   author = {Thomas Lin Pedersen},
-  year = {2022},
-  note = {R package version 1.1.2},
+  year = {2019},
+  note = {R package version 1.0.0},
   url = {https://CRAN.R-project.org/package=patchwork},
 }
 
 @Manual{R-purrr,
   title = {purrr: Functional Programming Tools},
-  author = {Lionel Henry and Hadley Wickham},
-  year = {2020},
-  note = {R package version 0.3.4},
+  author = {Hadley Wickham and Lionel Henry},
+  year = {2023},
+  note = {R package version 1.0.1},
   url = {https://CRAN.R-project.org/package=purrr},
 }
 
 @Manual{R-readr,
   title = {readr: Read Rectangular Text Data},
   author = {Hadley Wickham and Jim Hester and Jennifer Bryan},
-  year = {2022},
-  note = {R package version 2.1.2},
+  year = {2023},
+  note = {R package version 2.1.4},
   url = {https://CRAN.R-project.org/package=readr},
 }
 
 @Manual{R-rmarkdown,
   title = {rmarkdown: Dynamic Documents for R},
   author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
-  year = {2022},
-  note = {R package version 2.14},
-  url = {https://CRAN.R-project.org/package=rmarkdown},
+  year = {2021},
+  note = {https://github.com/rstudio/rmarkdown,
+https://pkgs.rstudio.com/rmarkdown/},
 }
 
 @Manual{R-stringr,
   title = {stringr: Simple, Consistent Wrappers for Common String Operations},
   author = {Hadley Wickham},
-  year = {2019},
-  note = {R package version 1.4.0},
+  year = {2022},
+  note = {R package version 1.5.0},
   url = {https://CRAN.R-project.org/package=stringr},
 }
 
 @Manual{R-tibble,
   title = {tibble: Simple Data Frames},
   author = {Kirill Müller and Hadley Wickham},
-  year = {2022},
-  note = {R package version 3.1.7},
+  year = {2023},
+  note = {R package version 3.2.0},
   url = {https://CRAN.R-project.org/package=tibble},
 }
 
 @Manual{R-tidyr,
   title = {tidyr: Tidy Messy Data},
-  author = {Hadley Wickham and Maximilian Girlich},
-  year = {2022},
-  note = {R package version 1.2.0},
+  author = {Hadley Wickham and Davis Vaughan and Maximilian Girlich},
+  year = {2023},
+  note = {R package version 1.3.0},
   url = {https://CRAN.R-project.org/package=tidyr},
 }
 
 @Manual{R-tidyverse,
   title = {tidyverse: Easily Install and Load the Tidyverse},
   author = {Hadley Wickham},
-  year = {2021},
-  note = {R package version 1.3.1},
+  year = {2023},
+  note = {R package version 2.0.0},
   url = {https://CRAN.R-project.org/package=tidyverse},
 }
 
 @Manual{R-TSA,
   title = {TSA: Time Series Analysis},
   author = {Kung-Sik Chan and Brian Ripley},
-  year = {2022},
-  note = {R package version 1.3.1},
-  url = {https://stat.uiowa.edu/~kchan/TSA.htm},
+  year = {2018},
+  note = {R package version 1.2},
+  url = {http://www.stat.uiowa.edu/~kchan/TSA.htm},
 }
 
 @Book{bookdown2016,
@@ -149,8 +157,8 @@
   publisher = {Chapman and Hall/CRC},
   address = {Boca Raton, Florida},
   year = {2016},
-  isbn = {978-1138700109},
-  url = {https://bookdown.org/yihui/bookdown},
+  note = {ISBN 978-1138700109},
+  url = {https://github.com/rstudio/bookdown},
 }
 
 @Article{forecast2008,
@@ -161,7 +169,7 @@
   number = {3},
   pages = {1--22},
   year = {2008},
-  doi = {10.18637/jss.v027.i03},
+  url = {https://www.jstatsoft.org/article/view/v027i03},
 }
 
 @Book{ggplot22016,
@@ -193,6 +201,17 @@
   year = {2014},
   note = {ISBN 978-1466561595},
   url = {http://www.crcpress.com/product/isbn/9781466561595},
+}
+
+@Article{lubridate2011,
+  title = {Dates and Times Made Easy with {lubridate}},
+  author = {Garrett Grolemund and Hadley Wickham},
+  journal = {Journal of Statistical Software},
+  year = {2011},
+  volume = {40},
+  number = {3},
+  pages = {1--25},
+  url = {https://www.jstatsoft.org/v40/i03/},
 }
 
 @Book{rmarkdown2018,
