--- a/packages.bib
+++ b/packages.bib
@@ -10,9 +10,9 @@
 @Manual{R-bookdown,
   title = {bookdown: Authoring Books and Technical Documents with R Markdown},
   author = {Yihui Xie},
-  year = {2021},
-  note = {R package version 0.21.6},
-  url = {https://github.com/rstudio/bookdown},
+  year = {2023},
+  note = {R package version 0.35},
+  url = {https://CRAN.R-project.org/package=bookdown},
 }
 
 @Manual{R-dplyr,
@@ -58,8 +58,8 @@
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
-  year = {2021},
-  note = {R package version 1.31},
+  year = {2023},
+  note = {R package version 1.43},
   url = {https://yihui.org/knitr/},
 }
 
@@ -105,10 +105,10 @@
 
 @Manual{R-rmarkdown,
   title = {rmarkdown: Dynamic Documents for R},
-  author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
-  year = {2021},
-  note = {https://github.com/rstudio/rmarkdown,
-https://pkgs.rstudio.com/rmarkdown/},
+  author = {JJ Allaire and Yihui Xie and Christophe Dervieux and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
+  year = {2023},
+  note = {R package version 2.24},
+  url = {https://CRAN.R-project.org/package=rmarkdown},
 }
 
 @Manual{R-stringr,
@@ -157,8 +157,8 @@ https://pkgs.rstudio.com/rmarkdown/},
   publisher = {Chapman and Hall/CRC},
   address = {Boca Raton, Florida},
   year = {2016},
-  note = {ISBN 978-1138700109},
-  url = {https://github.com/rstudio/bookdown},
+  isbn = {978-1138700109},
+  url = {https://bookdown.org/yihui/bookdown},
 }
 
 @Article{forecast2008,
@@ -200,7 +200,6 @@ https://pkgs.rstudio.com/rmarkdown/},
   publisher = {Chapman and Hall/CRC},
   year = {2014},
   note = {ISBN 978-1466561595},
-  url = {http://www.crcpress.com/product/isbn/9781466561595},
 }
 
 @Article{lubridate2011,
@@ -220,7 +219,7 @@ https://pkgs.rstudio.com/rmarkdown/},
   publisher = {Chapman and Hall/CRC},
   address = {Boca Raton, Florida},
   year = {2018},
-  note = {ISBN 9781138359338},
+  isbn = {9781138359338},
   url = {https://bookdown.org/yihui/rmarkdown},
 }
 
@@ -230,7 +229,7 @@ https://pkgs.rstudio.com/rmarkdown/},
   publisher = {Chapman and Hall/CRC},
   address = {Boca Raton, Florida},
   year = {2020},
-  note = {ISBN 9780367563837},
+  isbn = {9780367563837},
   url = {https://bookdown.org/yihui/rmarkdown-cookbook},
 }
 
