--- a/packages.bib
+++ b/packages.bib
@@ -3,7 +3,7 @@
   author = {{R Core Team}},
   organization = {R Foundation for Statistical Computing},
   address = {Vienna, Austria},
-  year = {2019},
+  year = {2023},
   url = {https://www.R-project.org/},
 }
 
@@ -11,144 +11,155 @@
   title = {bookdown: Authoring Books and Technical Documents with R Markdown},
   author = {Yihui Xie},
   year = {2023},
-  note = {R package version 0.35},
-  url = {https://CRAN.R-project.org/package=bookdown},
+  note = {R package version 0.37, 
+https://pkgs.rstudio.com/bookdown/},
+  url = {https://github.com/rstudio/bookdown},
 }
 
 @Manual{R-dplyr,
   title = {dplyr: A Grammar of Data Manipulation},
   author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller and Davis Vaughan},
   year = {2023},
-  note = {R package version 1.1.0},
-  url = {https://CRAN.R-project.org/package=dplyr},
+  note = {R package version 1.1.4},
+  url = {https://dplyr.tidyverse.org},
 }
 
 @Manual{R-forcats,
   title = {forcats: Tools for Working with Categorical Variables (Factors)},
   author = {Hadley Wickham},
   year = {2023},
-  note = {R package version 1.0.0},
-  url = {https://CRAN.R-project.org/package=forcats},
+  note = {R package version 1.0.0, 
+https://github.com/tidyverse/forcats},
+  url = {https://forcats.tidyverse.org/},
 }
 
 @Manual{R-forecast,
   title = {forecast: Forecasting Functions for Time Series and Linear Models},
-  author = {Rob Hyndman and George Athanasopoulos and Christoph Bergmeir and Gabriel Caceres and Leanne Chhay and Mitchell O'Hara-Wild and Fotios Petropoulos and Slava Razbash and Earo Wang and Farah Yasmeen},
-  year = {2020},
-  note = {R package version 8.13},
-  url = {https://CRAN.R-project.org/package=forecast},
+  author = {Rob Hyndman and George Athanasopoulos and Christoph Bergmeir and Gabriel Caceres and Leanne Chhay and Kirill Kuroptev and Mitchell O'Hara-Wild and Fotios Petropoulos and Slava Razbash and Earo Wang and Farah Yasmeen},
+  year = {2023},
+  note = {R package version 8.21.1, 
+https://github.com/robjhyndman/forecast},
+  url = {https://pkg.robjhyndman.com/forecast/},
 }
 
 @Manual{R-ggplot2,
   title = {ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics},
   author = {Hadley Wickham and Winston Chang and Lionel Henry and Thomas Lin Pedersen and Kohske Takahashi and Claus Wilke and Kara Woo and Hiroaki Yutani and Dewey Dunnington},
   year = {2023},
-  note = {R package version 3.4.1},
-  url = {https://CRAN.R-project.org/package=ggplot2},
+  note = {R package version 3.4.4, 
+https://github.com/tidyverse/ggplot2},
+  url = {https://ggplot2.tidyverse.org},
 }
 
 @Manual{R-kableExtra,
   title = {kableExtra: Construct Complex Table with kable and Pipe Syntax},
   author = {Hao Zhu},
-  year = {2021},
-  note = {R package version 1.3.4},
-  url = {https://CRAN.R-project.org/package=kableExtra},
+  year = {2024},
+  note = {R package version 1.4.0, 
+https://github.com/haozhu233/kableExtra},
+  url = {http://haozhu233.github.io/kableExtra/},
 }
 
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
   year = {2023},
-  note = {R package version 1.43},
+  note = {R package version 1.45},
   url = {https://yihui.org/knitr/},
 }
 
 @Manual{R-latex2exp,
   title = {latex2exp: Use LaTeX Expressions in Plots},
   author = {Stefano Meschiari},
-  year = {2015},
-  note = {R package version 0.4.0},
-  url = {http://github.com/stefano-meschiari/latex2exp},
+  year = {2022},
+  note = {R package version 0.9.6, 
+https://github.com/stefano-meschiari/latex2exp},
+  url = {https://www.stefanom.io/latex2exp/},
 }
 
 @Manual{R-lubridate,
   title = {lubridate: Make Dealing with Dates a Little Easier},
   author = {Vitalie Spinu and Garrett Grolemund and Hadley Wickham},
   year = {2023},
-  note = {R package version 1.9.2},
-  url = {https://CRAN.R-project.org/package=lubridate},
+  note = {R package version 1.9.3, 
+https://github.com/tidyverse/lubridate},
+  url = {https://lubridate.tidyverse.org},
 }
 
 @Manual{R-patchwork,
   title = {patchwork: The Composer of Plots},
   author = {Thomas Lin Pedersen},
-  year = {2019},
-  note = {R package version 1.0.0},
-  url = {https://CRAN.R-project.org/package=patchwork},
+  year = {2024},
+  note = {R package version 1.2.0, 
+https://github.com/thomasp85/patchwork},
+  url = {https://patchwork.data-imaginist.com},
 }
 
 @Manual{R-purrr,
   title = {purrr: Functional Programming Tools},
   author = {Hadley Wickham and Lionel Henry},
   year = {2023},
-  note = {R package version 1.0.1},
-  url = {https://CRAN.R-project.org/package=purrr},
+  note = {R package version 1.0.2},
+  url = {https://purrr.tidyverse.org/},
 }
 
 @Manual{R-readr,
   title = {readr: Read Rectangular Text Data},
   author = {Hadley Wickham and Jim Hester and Jennifer Bryan},
-  year = {2023},
-  note = {R package version 2.1.4},
-  url = {https://CRAN.R-project.org/package=readr},
+  year = {2024},
+  note = {R package version 2.1.5},
+  url = {https://readr.tidyverse.org},
 }
 
 @Manual{R-rmarkdown,
   title = {rmarkdown: Dynamic Documents for R},
   author = {JJ Allaire and Yihui Xie and Christophe Dervieux and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
   year = {2023},
-  note = {R package version 2.24},
-  url = {https://CRAN.R-project.org/package=rmarkdown},
+  note = {R package version 2.25, 
+https://pkgs.rstudio.com/rmarkdown/},
+  url = {https://github.com/rstudio/rmarkdown},
 }
 
 @Manual{R-stringr,
   title = {stringr: Simple, Consistent Wrappers for Common String Operations},
   author = {Hadley Wickham},
-  year = {2022},
-  note = {R package version 1.5.0},
-  url = {https://CRAN.R-project.org/package=stringr},
+  year = {2023},
+  note = {R package version 1.5.1, 
+https://github.com/tidyverse/stringr},
+  url = {https://stringr.tidyverse.org},
 }
 
 @Manual{R-tibble,
   title = {tibble: Simple Data Frames},
   author = {Kirill Müller and Hadley Wickham},
   year = {2023},
-  note = {R package version 3.2.0},
-  url = {https://CRAN.R-project.org/package=tibble},
+  note = {R package version 3.2.1},
+  url = {https://tibble.tidyverse.org/},
 }
 
 @Manual{R-tidyr,
   title = {tidyr: Tidy Messy Data},
   author = {Hadley Wickham and Davis Vaughan and Maximilian Girlich},
-  year = {2023},
-  note = {R package version 1.3.0},
-  url = {https://CRAN.R-project.org/package=tidyr},
+  year = {2024},
+  note = {R package version 1.3.1},
+  url = {https://tidyr.tidyverse.org},
 }
 
 @Manual{R-tidyverse,
   title = {tidyverse: Easily Install and Load the Tidyverse},
   author = {Hadley Wickham},
   year = {2023},
-  note = {R package version 2.0.0},
-  url = {https://CRAN.R-project.org/package=tidyverse},
+  note = {R package version 2.0.0, 
+https://github.com/tidyverse/tidyverse},
+  url = {https://tidyverse.tidyverse.org},
 }
 
 @Manual{R-TSA,
   title = {TSA: Time Series Analysis},
   author = {Kung-Sik Chan and Brian Ripley},
-  year = {2018},
-  note = {R package version 1.2},
-  url = {http://www.stat.uiowa.edu/~kchan/TSA.htm},
+  year = {2022},
+  note = {R package version 1.3.1},
+  url = {https://stat.uiowa.edu/~kchan/TSA.htm},
 }
 
 @Book{bookdown2016,
@@ -169,7 +180,7 @@
   number = {3},
   pages = {1--22},
   year = {2008},
-  url = {https://www.jstatsoft.org/article/view/v027i03},
+  doi = {10.18637/jss.v027.i03},
 }
 
 @Book{ggplot22016,
