Ecuación desglosada en el capítulo AR
Ecuación desglosada en el capítulo AR referente a la covarianza de un AR(1)

--- a/preamble.tex
+++ b/preamble.tex
@@ -20,6 +20,9 @@
 \renewcommand{\bottomfraction}{0.8}
 \renewcommand{\floatpagefraction}{0.75}
 \usepackage{listings}
+\usepackage{hyperref}
+\usepackage{ccaption}
+\usepackage{cancel}
 \lstset{
   breaklines=true
 }
