--- a/07_ARMA.Rmd
+++ b/07_ARMA.Rmd
@@ -125,7 +125,7 @@ $$
 \rho_{k} =
 \begin{cases}
 1 & k=0\\
-\frac{\phi_1\gamma_0+\theta_1\sigma_2}{\gamma_0}=\phi_1-\frac{\theta_1\sigma^2}{\gamma_0} & k=1\\
+\frac{\phi_1\gamma_0+\theta_1\sigma_2}{\gamma_0}=\phi_1+\frac{\theta_1\sigma^2}{\gamma_0} & k=1\\
 \frac{\phi_1\gamma_{k-1}}{\gamma_0} = \phi_1\rho_{k-1} & k>1
 \end{cases}       
 $$
